Resolve CSS overflow property issue
Special thanks - @runthe

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,6 +4,6 @@
   <title>React Chess</title>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root" class="l-flex-col"></div>
 </body>
 </html>
