--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -1,9 +1,22 @@
 <html lang="en">
-<head>
-  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  <title>React Chess</title>
-</head>
-<body>
-  <div id="root"></div>
-</body>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <title>React Chess</title>
+  </head>
+  <body>
+    <div id="root"></div>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1106516-16"></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+
+      gtag('js', new Date())
+      gtag('config', 'UA-1106516-16')
+    </script>
+  </body>
 </html>
