--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -2,12 +2,45 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>React Chess</title>
+
+    <style>
+      .ribbon {
+        background-color: #a00;
+        overflow: hidden;
+        white-space: nowrap;
+        position: absolute;
+        left: -50px;
+        top: 40px;
+        -webkit-transform: rotate(-45deg);
+        -moz-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+      }
+      .ribbon a {
+        border: 1px solid #faa;
+        color: #fff;
+        display: block;
+        font: bold 81.25% 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        margin: 1px 0;
+        padding: 10px 50px;
+        text-align: center;
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
 
+    <div class="ribbon">
+      <a href="https://github.com/jsveron23/react-chess">Fork me on GitHub</a>
+    </div>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1106516-16"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-1106516-16"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || []
 
