--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -37,10 +38,7 @@
     </div>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-1106516-16"
-    ></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1106516-16"></script>
     <script>
       window.dataLayer = window.dataLayer || []
 
