--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -10,5 +10,21 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-1106516-16"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+
+      gtag('js', new Date());
+      gtag('config', 'UA-1106516-16');
+    </script>
   </body>
 </html>
